--- a/Quiz.html
+++ b/Quiz.html
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 
 # Induction Quiz
 ### Dr. Thomas Pollet, Northumbria University (Twitter: <span class="citation">@tvpollet</span>)
-### 2018-09-24 | <a href="http://tvpollet.github.io/disclaimer">disclaimer</a>
+### 2018-09-26 | <a href="http://tvpollet.github.io/disclaimer">disclaimer</a>
 
 ---
 
@@ -208,7 +208,7 @@ The imitation game is a film starring Benedict Cumberbatch. It portrays the life
 ---
 ## Question 16: Brains, Brains, Brains (Neuropsychology).
 
-Which brain structure is translates literally translated as 'little brain' in Latin?
+Which brain structure is literally translated as 'little brain' in Latin?
 
 &lt;img src="brain.gif" width="500px" style="display: block; margin: auto;" /&gt;
 
