--- a/Quiz.html
+++ b/Quiz.html
@@ -315,7 +315,7 @@ This celebrity has over 12 million followers on YouTube and regularly vlogs abou
 ---
 ## Question 29: Technology!
 
-At the psychology and communication technology (PaCT) Lab they conduct research focussing on human - computer interactions. Which word is missing from the following paper title of a recently published paper?
+At the psychology and communication technology (PaCT) Lab they conduct research focussing on human - computer interactions. Which word is missing from the following title of a recently published paper?
 
 McNeill, A. and Sillence, E. (2018). Motivations and stake management in producing YouTube “bro-science” videos for **X** treatment. _International Journal of Web Based Communities, 14 (2)_, 97-113. 
 
