--- a/Quiz-2019.html
+++ b/Quiz-2019.html
@@ -270,7 +270,9 @@ When was Newcastle Brown ale first launched, you can be 3 years off?
 
 The 'mirror test', also sometimes referred to as mark test, has been argued to be a test of visual self-recognition. 
 
-In 2015, a study found evidence that 3 species were able to pass the test: _Myrmica sabuleti, Myrmica rubra, and Myrmica ruginodis_. They are species of what animal? 
+In 2015, a study found evidence that 3 species were able to pass the test: _Myrmica sabuleti, Myrmica rubra, and Myrmica ruginodis_. 
+
+They are species of what animal? 
 
 &lt;img src="https://media.giphy.com/media/noqUFXGNuZDLG/giphy.gif" width="500px" style="display: block; margin: auto;" /&gt;
 
@@ -334,7 +336,7 @@ Which 4 celebrities are in the morphed images below? (You can get 0.5 point if y
 ---
 ## Question 25: IT and related problems.
 
-What is the extension you have to dial to reach the Northumbria IT helpline (on a phone at campus). 4 digits needed.
+What is the extension you have to dial to reach the Northumbria IT helpline (on a phone at campus)? 4 digits needed.
 
 &lt;img src="https://media.giphy.com/media/cpY0YQRx9KfXW/giphy.gif" width="450px" style="display: block; margin: auto;" /&gt;
 
